# nooshdaroo

./: .gitignore  ADVANCED_TRAFFIC_SHAPING.md  CHANGELOG.md  CONSOLIDATION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_STATUS.md  DNS_IRAN_DEPLOYMENT.md  DNS_TUNNEL_ANALYSIS.md  DNS_TUNNEL_INTEGRATION_PLAN.md  DUAL_TRANSPORT_DNS_DESIGN.md  FEATURES_SUMMARY.md  HANDSHAKE_PHASES_SUMMARY.md  HANDSHAKE_VERIFICATION.md  ICMP_VS_DNS_TUNNELING.md  IOS_ANDROID_INTEGRATION.md  KCP_DEADLOCK_ISSUE.md  KEYGEN_GUIDE.md  LICENSE-APACHE  LICENSE-MIT  MOBILE_PROTOCOLS_READY.md  MOBILE_TRANSPORTS.md  NDPI_BASELINE_SUCCESS.md  NETFLOW_EVASION.md  NOISE_TRANSPORT.md  NOOSHDAROO_DESIGN.md  NOOSHDAROO_MOBILE.md  NOOSHDAROO_QUICKSTART.md  NOOSHDAROO_README.md  NOOSHDAROO_SUMMARY.md  NOOSHDAROO_TECHNICAL_REFERENCE.md  NQUIC_ARCHITECTURE.md  NQUIC_DNS_SPEC.md  NQUIC_LIBRARY_EVALUATION.md  NQUIC_STATUS.md  NQUIC_USAGE.md  PROPOSAL_FULL_TLS_SESSION_EMULATION.md  PROXY_COMPARISON.md  PSF_GOOGLE_PROTOCOLS.md  (+53 more)
.claude/agents/: rust-network-protocol-expert.md
.github/workflows/: ci.yml  release.yml
benches/: performance_benchmarks.rs
examples/: adaptive_traffic_demo.rs  dns_tunnel_test.rs  encrypted_client.toml  encrypted_server.toml  mutual_auth_client.toml  mutual_auth_server.toml  nooshdaroo-mobile.toml  nooshdaroo-simple.toml  nooshdaroo-socat.sh
examples/profiles/: netflix_config.toml  teams_config.toml  whatsapp_config.toml  youtube_config.toml  zoom_config.toml
protocols/cloud/: consul.psf  docker-api.psf  etcd.psf  kubernetes-api.psf
protocols/database/: cassandra.psf  couchdb.psf  elasticsearch.psf  influxdb.psf  memcached.psf  mongodb.psf  mysql.psf  neo4j.psf  postgresql.psf  redis.psf  rethinkdb.psf
protocols/dns/: dns-over-https.psf  dns-over-quic.psf  dns-over-tls.psf  dns-udp-tunnel.psf  dns.psf  dns_broken_backup.psf  dns_google_com.psf  mdns.psf
protocols/email/: imap.psf  imaps.psf  pop3.psf  pop3s.psf  smtp.psf  smtps.psf
protocols/file-transfer/: bittorrent.psf  ftp.psf  ftps.psf  nfs.psf  rsync.psf  scp.psf  sftp.psf  smb.psf  tftp.psf  webdav.psf
protocols/gaming/: csgo.psf  discord.psf  dota2.psf  fortnite.psf  league.psf  minecraft.psf  overwatch.psf  pubg.psf  steam.psf  valorant.psf
protocols/http/: graphql.psf  grpc.psf  http2.psf  http3.psf  https.psf  https_google_com.psf  quic.psf  rest.psf  soap.psf  spdy.psf  tls13_complete.psf  tls_simple.psf  webrtc.psf  websocket.psf
protocols/iot/: amqp.psf  bacnet.psf  bluetooth-le.psf  bluetooth-mesh.psf  coap.psf  lorawan.psf  matter.psf  modbus.psf  mqtt.psf  ocf.psf  thread.psf  zigbee.psf  zwave.psf
protocols/messaging/: irc.psf  matrix.psf  mqtt5.psf  signal.psf  skype.psf  slack.psf  stomp.psf  telegram.psf  whatsapp.psf  xmpp.psf
protocols/network/: bgp.psf  gre.psf  netflow.psf  ospf.psf  sflow.psf  snmp.psf  vxlan.psf
protocols/printing/: ipp.psf
protocols/quic/: quic.psf
protocols/security/: kerberos.psf  ldap.psf  oauth2.psf  openid-connect.psf  radius.psf  saml.psf  tacacs.psf
protocols/ssh/: ssh.psf
protocols/streaming/: dash.psf  hls.psf  icecast.psf  mms.psf  rtmp.psf  rtp.psf  rtsp.psf  shoutcast.psf  srt.psf  webm.psf
protocols/tls/: tls13.psf
protocols/voip/: h323.psf  sip.psf
protocols/vpn/: ikev2.psf  ipsec.psf  l2tp.psf  openvpn.psf  pptp.psf  softether.psf  sstp.psf  tailscale.psf  wireguard.psf  zerotier.psf
protocols/websocket/: websocket.psf
src/: app_profiles.rs  bandwidth.rs  config.rs  dns_dual_transport.rs  dns_dual_transport_client.rs  dns_quic_tunnel.rs  dns_transport.rs  dns_tunnel.rs  dns_tunnel_v2.rs  dns_udp_tunnel.rs  embedded_keys.rs  json_logger.rs  lib.rs  library.rs  main.rs  mobile.rs  mod.rs  multiport_server.rs  netflow_evasion.rs  noise_transport.rs  profiles.rs  protocol.rs  protocol_wrapper.rs  proxy.rs  reliable_transport.rs  shapeshift.rs  socat.rs  socks5.rs  socks_udp.rs  strategy.rs  tls_record_layer.rs  traceroute.rs  traffic.rs  transport.rs  udp_proxy.rs
tests/: multi_protocol_test.rs  performance_measurements.rs  protocol_loading_tests.rs  protocol_wrapper_integration.rs  show_protocol_hex.rs  test_all_121_protocols.rs  test_google_psf_parsing.rs  test_handshake_detailed.rs  test_handshake_flow.rs  test_simple_psf.rs
website/: README.md  index.html  style.css  style.css.backup
(+20 files in other folders)
