[package]
name = "nooshdaroo"
version = "0.2.2"
edition = "2021"
authors = ["Sina Rabbani"]
description = "Protocol Shape-Shifting SOCKS Proxy - Dynamic protocol emulation for encrypted proxy traffic"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/0xinf0/nooshdaroo"
repository = "https://github.com/0xinf0/nooshdaroo"
keywords = ["proxy", "socks", "protocol", "censorship", "obfuscation"]
categories = ["network-programming", "cryptography", "command-line-utilities"]
exclude = ["nDPI/", "RFCs.docset/", "*.tgz", "dist/", "target/", "tcpdump_captures/", "sni_captures/", "*.pcap", "test_*.sh", "debug_*.rs", "examples/", "tests/", "website/", "*.toml", "!Cargo.toml"]

[lib]
name = "nooshdaroo"
path = "src/lib.rs"

[[bin]]
name = "nooshdaroo"
path = "src/main.rs"

[[bin]]
name = "dns-socks-client"
path = "src/bin/dns_socks_client.rs"

[[bin]]
name = "dns-socks-server"
path = "src/bin/dns_socks_server.rs"

[dependencies]
# Async runtime
tokio = { version = "1.17.0", features = ["macros", "rt", "rt-multi-thread", "io-util", "net", "sync", "time", "fs"] }
async-trait = "0.1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.8"

# Network utilities
bytes = "1.4.0"

# Logging
log = "0.4.0"
env_logger = "0.11"

# Time and randomness
chrono = "0.4"
rand = "0.8.5"
rand_distr = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time parsing
humantime-serde = "1.1"
humantime = "2.1"

# System calls (for transparent proxy)
libc = "0.2"

# CLI parsing
clap = { version = "4.5", features = ["derive", "env", "cargo"] }

# Noise Protocol for encrypted transport
snow = { version = "0.9", features = ["risky-raw-split"] }
base64 = "0.22"
hex = "0.4"
data-encoding = "2.5"  # For DNS-safe base32 encoding
futures = "0.3"  # For join_all in pipelining

# QUIC with Noise (nQUIC) transport
quinn = "0.11"
quinn-proto = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
ring = "0.17"

# KCP reliability layer for DNS/ICMP transports
kcp = "0.6"
rustls-native-certs = "0.8"
rcgen = "0.13"

# WebRTC transport
webrtc = "0.11"

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[[example]]
name = "dns_tunnel_test"
path = "examples/dns_tunnel_test.rs"
